# ferpa-haystack

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py
src/haystack_integrations/components/filters/ferpa_filter/: __init__.py  ferpa_metadata_filter.py
tests/: test_ferpa_metadata_filter.py
